# spdlog-rs

.github/workflows/: ci.yml
spdlog/: Cargo.toml
spdlog-macros/: Cargo.toml
spdlog/examples/: 05_custom_formatter.rs
spdlog/src/: level.rs  lib.rs  log_crate_proxy.rs  logger.rs  record.rs  test_utils.rs  utils.rs
spdlog/src/formatter/: full_formatter.rs  iso8601_datetime_formatter.rs  journald_formatter.rs  local_time_cacher.rs  mod.rs
spdlog/src/formatter/pattern_formatter/: mod.rs
spdlog/src/formatter/pattern_formatter/pattern/: datetime.rs  eol.rs  level.rs  logger_name.rs  payload.rs  srcloc.rs  thread_id.rs
spdlog/src/sink/: date_and_hour_rotating_file_sink.rs  mod.rs
spdlog/tests/: log_crate_proxy.rs
