[package]
name = "spdlog-rs"
version = "0.3.10"
edition = "2021"
rust-version = "1.60"
description = "A fast and combinable Rust logging crate, inspired by the C++ logging library spdlog"
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "spdlog"

[features]
default = ["log", "multi-thread", "source-location", "flexible-string"]

level-off      = []
level-critical = []
level-error    = []
level-warn     = []
level-info     = []
level-debug    = []
level-trace    = []

release-level-off      = []
release-level-critical = []
release-level-error    = []
release-level-warn     = []
release-level-info     = []
release-level-debug    = []
release-level-trace    = []

source-location = []
native = []
libsystemd = ["libsystemd-sys"]
multi-thread = ["crossbeam"]

[dependencies]
arc-swap = "1"
atomic = "0.5"
cfg-if = "1"
chrono = "0.4"
crossbeam = { version = "0.8", optional = true }
flexible-string = { version = "0.1", optional = true }
if_chain = "1"
is-terminal = "0.4"
log = { version = "0.4", optional = true }
once_cell = "1"
spdlog-macros = { version = "0.1", path = "../spdlog-macros" }
spin = "0.9"
static_assertions = "1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "debugapi", "handleapi", "processenv", "processthreadsapi", "winbase", "wincon"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "0.38", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd-sys = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices"
]

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
crossbeam = "0.8"
regex = "1"

# The following dependencies are used for benchmarks
log = "=0.4"
slog = "=2"
sloggers = "=2"
log4rs = "=1"
fern = "=0.6"
flexi_logger = "=0.24"
tracing = "=0.1"
tracing-subscriber = "=0.3"
tracing-appender = "=0.2"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "compare_with_cpp_spdlog"
harness = false

[[bench]]
name = "compare_with_cpp_spdlog_async"
harness = false

[[example]]
name = "06_compatible_with_log_crate"
required-features = ["log"]

[[example]]
name = "07_async_pool_sink"
required-features = ["multi-thread"]
